修改配置，增加支持IE的polyfill

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "axios": "0.18.0",
+    "babel-polyfill": "^6.26.0",
     "clipboard": "1.7.1",
     "codemirror": "5.39.2",
     "connect": "3.6.6",
